--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,15 @@ name: Release
         required: false
         type: choice
         options:
-          - 'cloud'
+          - 'github-hosted'
           - 'self-hosted'
-        default: 'self-hosted'
-      version:
-        description: "Release version (e.g., v1.0.0)"
+          - 'local-macos'
+          - 'magalu'
+        default: 'github-hosted'
+      tag:
+        description: 'Tag to release (for re-running failed releases)'
         required: false
         type: string
-        default: manual
       dry_run:
         description: Dry run (don't create release)
         required: false
@@ -34,17 +35,15 @@ jobs:
     permissions:
       contents: read
     timeout-minutes: 60
-    runs-on: "${{ matrix.os }}"
+    runs-on: ${{ matrix.os == 'self-hosted' && 'self-hosted' || matrix.os == 'local-macos' && fromJSON('["self-hosted", "local-macos", "groovy-lsp"]') || matrix.os == 'magalu' && fromJSON('["self-hosted", "magalu", "groovy-lsp"]') || matrix.os }}
+    outputs:
+      build_version: ${{ steps.set-env.outputs.build_version }}
+      build_commit: ${{ steps.set-env.outputs.build_commit }}
     strategy:
       fail-fast: false
       matrix:
-        # FIXME: Temporary self-hosted-only release build
-        # Original runner matrix (kept for quick rollback):
-        # os: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '["self-hosted"]' || '["ubuntu-latest", "macos-latest", "windows-latest"]') }}
-        # java:
-        # - 17
         os:
-          - self-hosted
+          - ${{ (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && 'self-hosted' || (github.event.inputs.runner_label == 'local-macos' || vars.CI_RUNNER_LABEL == 'local-macos') && 'local-macos' || (github.event.inputs.runner_label == 'magalu' || vars.CI_RUNNER_LABEL == 'magalu') && 'magalu' || 'ubuntu-24.04' }}
         java:
           - 17
     steps:
@@ -52,6 +51,7 @@ jobs:
       uses: actions/checkout@v6
       with:
         fetch-depth: 0
+        ref: ${{ github.event.inputs.tag || github.ref }}
     - name: "Set up JDK ${{ matrix.java }}"
       uses: actions/setup-java@v5
       with:
@@ -70,22 +70,29 @@ jobs:
           echo "GRADLE_SCAN_FLAG=" >> $GITHUB_ENV
         fi
     - name: Set build environment variables
+      id: set-env
       shell: bash
       run: |
-        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-          if [ "${{ github.event.inputs.version }}" = "manual" ] || [ -z "${{ github.event.inputs.version }}" ]; then
-            VERSION="manual-$(date +%Y%m%d-%H%M%S)"
-          else
-            VERSION="${{ github.event.inputs.version }}"
-          fi
-        else
-          VERSION="${{ github.ref_name }}"
-        fi
+        # Priority: tag input > push tag > fallback (if not a version tag)
+        TAG="${{ github.event.inputs.tag }}"
+        TAG="${TAG:-${{ github.ref_name }}}"
+        # Normalize: add v prefix if missing (allows input of "0.4.5" or "v0.4.5")
+        [[ -n "$TAG" && "$TAG" =~ ^[0-9] ]] && TAG="v${TAG}"
+        # If TAG doesn't look like a version tag (v*), generate manual version
+        [[ ! "$TAG" =~ ^v[0-9] ]] && TAG="manual-$(date +%Y%m%d-%H%M%S)"
+        
+        # Get actual commit SHA from checked-out code (not github.sha which is dispatch trigger)
+        COMMIT_SHA=$(git rev-parse HEAD)
 
-        echo "Release version: ${VERSION}"
-        echo "BUILD_VERSION=${VERSION}" >> $GITHUB_ENV
-        echo "BUILD_COMMIT=${{ github.sha }}" >> $GITHUB_ENV
+        echo "Release version: ${TAG}"
+        echo "Commit SHA: ${COMMIT_SHA}"
+        echo "BUILD_VERSION=${TAG}" >> $GITHUB_ENV
+        echo "BUILD_COMMIT=${COMMIT_SHA}" >> $GITHUB_ENV
         echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_ENV
+        
+        # Set outputs for downstream jobs
+        echo "build_version=${TAG}" >> $GITHUB_OUTPUT
+        echo "build_commit=${COMMIT_SHA}" >> $GITHUB_OUTPUT
     - name: Validate Gradle Wrapper
       run: ./gradlew --no-daemon --version
     - name: Verify version detection
@@ -130,17 +137,15 @@ jobs:
     name: Create Release
     permissions:
       contents: write
-      id-token: write
     needs: build-release
-    # FIXME: Temporary; original runs-on preserved below
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ${{ (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && 'self-hosted' || (github.event.inputs.runner_label == 'local-macos' || vars.CI_RUNNER_LABEL == 'local-macos') && fromJSON('["self-hosted", "local-macos", "groovy-lsp"]') || (github.event.inputs.runner_label == 'magalu' || vars.CI_RUNNER_LABEL == 'magalu') && fromJSON('["self-hosted", "magalu", "groovy-lsp"]') || 'ubuntu-24.04' }}
     if: "${{ !inputs.dry_run }}"
     steps:
     - name: Checkout code
       uses: actions/checkout@v6
       with:
         fetch-depth: 0
+        ref: ${{ github.event.inputs.tag || github.ref }}
     - name: Download all artifacts
       uses: actions/download-artifact@v7
       with:
@@ -167,15 +172,9 @@ jobs:
       id: release_notes
       shell: bash
       run: |
-        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-          if [ "${{ github.event.inputs.version }}" = "manual" ] || [ -z "${{ github.event.inputs.version }}" ]; then
-            VERSION="manual-$(date +%Y%m%d-%H%M%S)"
-          else
-            VERSION="${{ github.event.inputs.version }}"
-          fi
-        else
-          VERSION="${{ github.ref_name }}"
-        fi
+        # Use VERSION from build-release job to ensure consistency
+        VERSION="${{ needs.build-release.outputs.build_version }}"
+        echo "Using version from build: ${VERSION}"
 
         cat > release-notes.md <<EOF
         ## Groovy LSP ${VERSION}
@@ -223,20 +222,20 @@ jobs:
       id: release_info
       shell: bash
       run: |
-        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-          if [ "${{ github.event.inputs.version }}" = "manual" ] || [ -z "${{ github.event.inputs.version }}" ]; then
-            VERSION="manual-$(date +%Y%m%d-%H%M%S)"
-            IS_PRERELEASE=true
-            IS_DRAFT=true
-          else
-            VERSION="${{ github.event.inputs.version }}"
-            IS_PRERELEASE=${{ contains(github.event.inputs.version, '-rc') || contains(github.event.inputs.version, '-beta') || contains(github.event.inputs.version, '-alpha') || contains(github.event.inputs.version, 'manual') }}
-            IS_DRAFT=true
-          fi
+        # Use VERSION from build-release job to ensure consistency
+        VERSION="${{ needs.build-release.outputs.build_version }}"
+        echo "Using version from build: ${VERSION}"
+
+        # Determine prerelease/draft status
+        if [[ "$VERSION" == manual-* ]]; then
+          IS_PRERELEASE=true
+          IS_DRAFT=true
+        elif [[ "$VERSION" =~ (-rc|-beta|-alpha) ]]; then
+          IS_PRERELEASE=true
+          IS_DRAFT=${{ github.event_name == 'workflow_dispatch' && 'true' || 'false' }}
         else
-          VERSION="${{ github.ref_name }}"
-          IS_PRERELEASE=${{ contains(github.ref_name, '-rc') || contains(github.ref_name, '-beta') || contains(github.ref_name, '-alpha') }}
-          IS_DRAFT=false
+          IS_PRERELEASE=false
+          IS_DRAFT=${{ github.event_name == 'workflow_dispatch' && 'true' || 'false' }}
         fi
 
         echo "version=${VERSION}" >> $GITHUB_OUTPUT
