fix: correct VSIX path in release workflow
defaults.run.working-directory doesn't affect 'with:' inputs.
Use editors/code/*.vsix consistent with extension-nightly.yml.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -334,5 +334,5 @@ jobs:
       - name: Upload VSIX to release
         uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2
         with:
-          files: '*.vsix'
+          files: editors/code/*.vsix
           tag_name: ${{ github.ref_name }}
