feat: unified release model + gvy extension rebrand
Release Workflow:
- Remove vscode-groovy-* tag trigger (now only v*)
- publish-extension job depends on create-release (unified)

Extension Rebrand:
- name: vscode-groovy → gvy
- displayName: gvy - Groovy
- description: powered by gls (Groovy Language Server)

Cleanup:
- Remove unsupported gradle activation events
- Remove redundant onLanguage activation events

This establishes the unified release model:
- Single v* tag releases both gls JAR + gvy extension
- gls = engine/CLI, gvy = VS Code extension brand

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,6 @@ name: Release
   push:
     tags:
     - v*
-    - vscode-groovy-*
   workflow_dispatch:
     inputs:
       runner_label:
@@ -309,10 +308,11 @@ jobs:
           fi
         done
 
-  # VS Code Extension publish (triggers on vscode-groovy-* tags)
+  # VS Code Extension publish (unified release - triggers on v* tags)
   publish-extension:
     name: Publish VS Code Extension
-    if: startsWith(github.ref, 'refs/tags/vscode-groovy-')
+    needs: create-release
+    if: ${{ !inputs.dry_run }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
