chore: update release branding to Groovy DevTools
- Release title: 'Groovy DevTools VERSION'
- Release notes header: 'Groovy DevTools VERSION'
- Add component descriptions: gls (JAR) + gvy (extension)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -205,7 +205,11 @@ jobs:
         echo "Using version from build: ${VERSION}"
 
         cat > release-notes.md <<EOF
-        ## Groovy LSP ${VERSION}
+        ## Groovy DevTools ${VERSION}
+
+        This release includes:
+        - **gls** (Groovy Language Server) - JAR download
+        - **gvy** (VS Code extension) - published to marketplace
 
         ### Installation
 
@@ -280,7 +284,7 @@ jobs:
         tag_name: "${{ steps.release_info.outputs.version }}"
         draft: "${{ steps.release_info.outputs.is_draft }}"
         prerelease: "${{ steps.release_info.outputs.is_prerelease }}"
-        name: "gls ${{ steps.release_info.outputs.version }}"
+        name: "Groovy DevTools ${{ steps.release_info.outputs.version }}"
         body_path: release-notes.md
         generate_release_notes: true
         files: |
