fix: restore onLanguage activation events for groovy/jenkinsfile

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -19,6 +19,8 @@
     "pipeline"
   ],
   "activationEvents": [
+    "onLanguage:groovy",
+    "onLanguage:jenkinsfile",
     "workspaceContains:**/Jenkinsfile",
     "workspaceContains:**/Jenkinsfile.*",
     "workspaceContains:**/*.groovy"
