--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,6 @@ name: Release
   push:
     tags:
     - v*
-    - vscode-groovy-*
   workflow_dispatch:
     inputs:
       runner_label:
@@ -155,6 +154,10 @@ jobs:
     permissions:
       contents: write
     needs: build-release
+    outputs:
+      tag_name: ${{ steps.release_info.outputs.version }}
+      is_prerelease: ${{ steps.release_info.outputs.is_prerelease }}
+      is_draft: ${{ steps.release_info.outputs.is_draft }}
     runs-on: ${{ (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && 'self-hosted' || (github.event.inputs.runner_label == 'local-macos' || vars.CI_RUNNER_LABEL == 'local-macos') && fromJSON('["self-hosted", "local-macos", "groovy-lsp"]') || (github.event.inputs.runner_label == 'magalu' || vars.CI_RUNNER_LABEL == 'magalu') && fromJSON('["self-hosted", "magalu", "groovy-lsp"]') || 'ubuntu-24.04' }}
     if: "${{ !inputs.dry_run }}"
     steps:
@@ -206,7 +209,11 @@ jobs:
         echo "Using version from build: ${VERSION}"
 
         cat > release-notes.md <<EOF
-        ## Groovy LSP ${VERSION}
+        ## Groovy DevTools ${VERSION}
+
+        This release includes:
+        - **gls** (Groovy Language Server) - JAR download
+        - **gvy** (IDE extension) - VS Code, Open VSX
 
         ### Installation
 
@@ -281,7 +288,7 @@ jobs:
         tag_name: "${{ steps.release_info.outputs.version }}"
         draft: "${{ steps.release_info.outputs.is_draft }}"
         prerelease: "${{ steps.release_info.outputs.is_prerelease }}"
-        name: "gls ${{ steps.release_info.outputs.version }}"
+        name: "Groovy DevTools ${{ steps.release_info.outputs.version }}"
         body_path: release-notes.md
         generate_release_notes: true
         files: |
@@ -309,10 +316,11 @@ jobs:
           fi
         done
 
-  # VS Code Extension publish (triggers on vscode-groovy-* tags)
+  # VS Code Extension publish (unified release - triggers on v* tags)
   publish-extension:
     name: Publish VS Code Extension
-    if: startsWith(github.ref, 'refs/tags/vscode-groovy-')
+    needs: create-release
+    if: ${{ !inputs.dry_run }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -324,6 +332,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        with:
+          ref: ${{ needs.create-release.outputs.tag_name }}
 
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
@@ -359,4 +369,4 @@ jobs:
         uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b # v2
         with:
           files: editors/code/*.vsix
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ needs.create-release.outputs.tag_name }}
