--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38
       with:
         token: "${{ secrets.RELEASE_PLEASE_TOKEN }}"
-        config-file: release-please-config.json
-        manifest-file: .release-please-manifest.json
+        config-file: tools/release-please/config.json
+        manifest-file: tools/release-please/manifest.json
