--- a/tools/release-please/config.json
+++ b/tools/release-please/config.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-    "separate-pull-requests": true,
+    "separate-pull-requests": false,
     "packages": {
         ".": {
             "release-type": "simple",
@@ -12,18 +12,9 @@
             "initial-version": "0.1.0",
             "prerelease": false,
             "extra-files": [
-                "build.gradle.kts"
+                "build.gradle.kts",
+                "editors/code/package.json"
             ]
-        },
-        "editors/code": {
-            "release-type": "node",
-            "component": "vscode-groovy",
-            "include-component-in-tag": false,
-            "changelog-path": "CHANGELOG.md",
-            "bump-minor-pre-major": true,
-            "bump-patch-for-minor-pre-major": true,
-            "prerelease": true,
-            "prerelease-type": "alpha"
         }
     }
 }
