--- a/.github/workflows/runner-cleanup.yml
+++ b/.github/workflows/runner-cleanup.yml
@@ -11,8 +11,8 @@ name: 'Infra: Auto-Cleanup Magalu Runner'
 
 on:
   schedule:
-    # Run every 2 hours
-    - cron: '0 */2 * * *'
+    # Every 2 hours at minute 0 UTC
+    - cron: '0 */2 * * *' # Every 2 hours at minute 0 UTC
   workflow_dispatch:
     inputs:
       force_cleanup:
