--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,9 +77,9 @@ jobs:
       shell: bash
       run: |-
         if [[ "${{ github.event.inputs.disable_scan }}" == "true" ]]; then
-          echo "GRADLE_SCAN_FLAG=-Dorg.gradle.scan=false" >> $GITHUB_ENV
+          echo "GRADLE_SCAN_FLAG=-Dorg.gradle.scan=false" >> "$GITHUB_ENV"
         else
-          echo "GRADLE_SCAN_FLAG=" >> $GITHUB_ENV
+          echo "GRADLE_SCAN_FLAG=" >> "$GITHUB_ENV"
         fi
     - name: Set build environment variables
       id: set-env
@@ -98,13 +98,17 @@ jobs:
 
         echo "Release version: ${TAG}"
         echo "Commit SHA: ${COMMIT_SHA}"
-        echo "BUILD_VERSION=${TAG}" >> $GITHUB_ENV
-        echo "BUILD_COMMIT=${COMMIT_SHA}" >> $GITHUB_ENV
-        echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_ENV
+        {
+          echo "BUILD_VERSION=${TAG}"
+          echo "BUILD_COMMIT=${COMMIT_SHA}"
+          echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+        } >> "$GITHUB_ENV"
         
         # Set outputs for downstream jobs
-        echo "build_version=${TAG}" >> $GITHUB_OUTPUT
-        echo "build_commit=${COMMIT_SHA}" >> $GITHUB_OUTPUT
+        {
+          echo "build_version=${TAG}"
+          echo "build_commit=${COMMIT_SHA}"
+        } >> "$GITHUB_OUTPUT"
     - name: Validate Release Script
       run: ./tools/release.sh validate --version "${{ env.BUILD_VERSION }}"
 
@@ -244,10 +248,12 @@ jobs:
           IS_DRAFT=${{ github.event_name == 'workflow_dispatch' && 'true' || 'false' }}
         fi
 
-        echo "version=${VERSION}" >> $GITHUB_OUTPUT
-        echo "version_no_v=${VERSION#v}" >> $GITHUB_OUTPUT
-        echo "is_prerelease=${IS_PRERELEASE}" >> $GITHUB_OUTPUT
-        echo "is_draft=${IS_DRAFT}" >> $GITHUB_OUTPUT
+        {
+          echo "version=${VERSION}"
+          echo "version_no_v=${VERSION#v}"
+          echo "is_prerelease=${IS_PRERELEASE}"
+          echo "is_draft=${IS_DRAFT}"
+        } >> "$GITHUB_OUTPUT"
 
         echo "Release settings:"
         echo "- Version: ${VERSION}"
@@ -262,7 +268,6 @@ jobs:
         name: "Groovy DevTools ${{ steps.release_info.outputs.version }}"
         body_path: release-notes.md
         generate_release_notes: true
-        files: |
         files: |
           dist/*
         fail_on_unmatched_files: false
@@ -282,8 +287,8 @@ jobs:
         cd dist
         for file in *; do
           if [[ -f "$file" ]]; then
-            size=$(ls -lh "$file" | awk '{print $5}')
-            echo "  - $file ($size)"
+            size=$(stat -c%s "$file" 2>/dev/null || stat -f%z "$file")
+            echo "  - $file (${size} bytes)"
           fi
         done
 
