--- a/tests/e2e/resources/scenarios/document-symbol-basic.yaml
+++ b/tests/e2e/resources/scenarios/document-symbol-basic.yaml
@@ -47,6 +47,9 @@ steps:
         - jsonPath: "$.[?(@.right.name == 'Widget' && @.right.kind == 'Class')]"
           expect:
             type: NOT_EMPTY
+        - jsonPath: "$.[?(@.right.name == 'Widget' && @.right.kind == 'Constructor')]"
+          expect:
+            type: NOT_EMPTY
         - jsonPath: "$.[?(@.right.name == 'compute' && @.right.kind == 'Method')]"
           expect:
             type: NOT_EMPTY
@@ -54,6 +57,9 @@ steps:
           expect:
             type: NOT_EMPTY
         - jsonPath: "$.[?(@.right.name == 'name' && @.right.kind == 'Field')]"
+          expect:
+            type: NOT_EMPTY
+        - jsonPath: "$.[?(@.right.name == 'name' && @.right.kind == 'Variable')]"
           expect:
             type: NOT_EMPTY
         - jsonPath: "$.[?(@.right.name == 'value' && @.right.kind == 'Variable')]"
