fix: narrow editors server ignore

--- a/editors/code/.gitignore
+++ b/editors/code/.gitignore
@@ -1,8 +1,8 @@
 # Language Server JAR (downloaded/copied during build)
-server/
-server/*.jar
-server/groovy-lsp.jar
-server/.groovy-lsp-version
+/server/
+/server/*.jar
+/server/groovy-lsp.jar
+/server/.groovy-lsp-version
 
 # Build outputs
 out/
